# Integradora1

./: .gitignore  CMakeLists.txt  README.md  analizador.h  main.cpp  sonar-project.properties  utils.h
.github/workflows/: build.yml
test/test/: test_busqueda.cpp  test_palindromo.cpp  test_substring.cpp
